--- a/.github/workflows/cypress_cucumber.yml
+++ b/.github/workflows/cypress_cucumber.yml
@@ -26,29 +26,29 @@ jobs:
       run: npm install @badeball/cypress-cucumber-preprocessor
     - name: Install cypress-browserify-preprocessor
       run: npm install --save-dev @cypress/browserify-preprocessor
-    - name: Install reporter dev
-      run: npm install --save-dev mocha-allure-reporter allure-commandline
+    - name: Install HTML reporter 
+      run: npm install multiple-cucumber-html-reporter --save-dev
     - name: Run Cypress_cucumber tests
       run: npm run test
     - name: Generate Report
       if: always()
-      run: npm run allure-generate
+      run: node cucumber-html-report.js
     - name: Upload Results
       uses: actions/upload-artifact@v1
       if: always()
       with:
-          name: allure-results
-          path: ./allure-results
+          name: HTML results
+          path: reports/cucumber-htmlreport/
     - name: Publishing Allure artifact to Github Actions
       uses: actions/upload-artifact@v2
       if: always()
       with:
-          name: allure-report
-          path: allure-report   
+          name: HTML-report
+          path: reports/cucumber-htmlreport/   
     - name: Deploy to pages
       if: always()
       uses: peaceiris/actions-gh-pages@v3.7.3
       with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: allure-report
+          publish_dir: reports/cucumber-htmlreport/
