--- a/.github/workflows/cypress_cucumber.yml
+++ b/.github/workflows/cypress_cucumber.yml
@@ -38,7 +38,7 @@ jobs:
       if: always()
       with:
           name: HTML results
-          path: reports/cucumber-htmlreport/
+          path: ./report
     - name: Publishing Allure artifact to Github Actions
       uses: actions/upload-artifact@v2
       if: always()
@@ -51,4 +51,4 @@ jobs:
       with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: reports/cucumber-htmlreport/
+          publish_dir: ./report
