--- a/.github/workflows/cypress_cucumber.yml
+++ b/.github/workflows/cypress_cucumber.yml
@@ -37,7 +37,7 @@ jobs:
      # uses: actions/upload-artifact@v1
     #  if: always()
      # with:
-          name: HTML results
+      #    name: HTML results
      #     path: ./reports/cucumber-htmlreport.html
   #  - name: Publishing Allure artifact to Github Actions
    #   uses: actions/upload-artifact@v2
