--- a/.github/workflows/cypress_cucumber.yml
+++ b/.github/workflows/cypress_cucumber.yml
@@ -51,4 +51,5 @@ jobs:
       with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: ./reports/cucumber-htmlreport.html
+          publish_dir: ./reports
+          # /cucumber-htmlreport.html
